--- a/Assignment7.BST/Assignment7.BST.vcxproj
+++ b/Assignment7.BST/Assignment7.BST.vcxproj
@@ -146,6 +146,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="BTS.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="BSTDriver.cpp" />
+    <ClCompile Include="BSTDefinition.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
